--- a/LaTeX/REVIEW_01/REVIEW_01.tex
+++ b/LaTeX/REVIEW_01/REVIEW_01.tex
@@ -87,7 +87,7 @@
 % Scale images if necessary, so that they will not overflow the page
 % margins by default, and it is still possible to overwrite the defaults
 % using explicit options in \includegraphics[width, height, ...]{}
-\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+\setkeys{Gin}{width=0.8\textwidth,keepaspectratio}
 % Set default figure placement to htbp
 \makeatletter
 \def\fps@figure{htbp}
@@ -1375,7 +1375,7 @@ way:
 
 The output looks like this:
 
-\includegraphics[width=0.3\textwidth]{/Users/lucas/Library/Mobile Documents/com~apple~CloudDocs/~~aa Study Materials/Grade 2 I/Learning/R for Data Science/Review of R/markdown/image/image-20231202114121080.png}
+\includegraphics[width=0.2\textwidth]{/Users/lucas/Library/Mobile Documents/com~apple~CloudDocs/~~aa Study Materials/Grade 2 I/Learning/R for Data Science/Review of R/markdown/image/image-20231202114121080.png}
 
 Now I request to replace with Female, Male.
 
@@ -1392,7 +1392,7 @@ Now I request to replace with Female, Male.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.3\textwidth]{/Users/lucas/Library/Mobile Documents/com~apple~CloudDocs/~~aa Study Materials/Grade 2 I/Learning/R for Data Science/Review of R/markdown/image/image-20231202114937281.png}
+\includegraphics[width=0.2\textwidth]{/Users/lucas/Library/Mobile Documents/com~apple~CloudDocs/~~aa Study Materials/Grade 2 I/Learning/R for Data Science/Review of R/markdown/image/image-20231202114937281.png}
 
 You can also use \texttt{fct\_relabel()} to do the same thing
 
@@ -1534,7 +1534,7 @@ Here's an example:
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics[width=0.3\textwidth]{/Users/lucas/Library/Mobile Documents/com~apple~CloudDocs/~~aa Study Materials/Grade 2 I/Learning/R for Data Science/Review of R/markdown/image/image-20231202135555790.png}
+\includegraphics[width=0.45\textwidth]{/Users/lucas/Library/Mobile Documents/com~apple~CloudDocs/~~aa Study Materials/Grade 2 I/Learning/R for Data Science/Review of R/markdown/image/image-20231202135555790.png}
 
 \hypertarget{delete-useless-levels}{%
 \subsubsection{\texorpdfstring{Delete useless
