--- a/LaTeX/CN/REVIEW_03/REVIEW_03.tex
+++ b/LaTeX/CN/REVIEW_03/REVIEW_03.tex
@@ -134,13 +134,6 @@
 
 \textbf{双语版}
 
-\begin{quote}
-Reference: \href{https://r4ds.had.co.nz}{R for Data Science}
-
-The book updated to 2\textsuperscript{nd} ed. on July,2023, here' s a
-\href{https://r4ds.hadley.nz}{link} to the official website.
-\end{quote}
-
 This work is licensed under CC BY-NC-SA 4.0
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -228,7 +221,7 @@ R}\label{basic-plot-functions-using-r}}
 
 \textbf{Arguments}
 
-\includegraphics{/Users/lucas/Library/Mobile Documents/com~apple~CloudDocs/~~aa Study Materials/Grade 2 I/Learning/R for Data Science/Review of R/markdown/image/image-20231213063700615.png}
+\includegraphics[width=0.8\textwidth]{/Users/lucas/Library/Mobile Documents/com~apple~CloudDocs/~~aa Study Materials/Grade 2 I/Learning/R for Data Science/Review of R/markdown/image/image-20231213063700615.png}
 
 You can also use \texttt{ggplot} to draw the plot above:
 
