--- a/LaTeX/CN/REVIEW_02/REVIEW_02.tex
+++ b/LaTeX/CN/REVIEW_02/REVIEW_02.tex
@@ -121,7 +121,7 @@
 \date{}
 
 \begin{document}
-
+\pagenumbering{Roman}
 \hypertarget{review-of-the-course-r-for-data-science-part-02talk-05-08}{%
 \section{Review of the course ``R for Data Science'' Part 02(Talk
 05\textasciitilde{}
@@ -140,6 +140,11 @@ This work is licensed under CC BY-NC-SA 4.0
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
+\tableofcontents
+
+\newpage
+\setcounter{page}{1}  % 将页码计数器设置为 1
+\pagenumbering{arabic}  % 使用阿拉伯数字重新编号页码
 \hypertarget{r-for-bioinformatics-data-wrangler-part-1}{%
 \section{R for bioinformatics, data wrangler, part
 1}\label{r-for-bioinformatics-data-wrangler-part-1}}
