--- a/LaTeX/EN/REVIEW_02/REVIEW_02.tex
+++ b/LaTeX/EN/REVIEW_02/REVIEW_02.tex
@@ -4,7 +4,6 @@
 %
 \documentclass[
 ]{article}
-\usepackage{ctex}
 \usepackage{geometry}
 \geometry{a4paper,left=2.8cm,right=2.8cm,top=3cm,bottom=2.5cm}
 \usepackage{amsmath,amssymb}
@@ -121,7 +120,7 @@
 \date{}
 
 \begin{document}
-
+\pagenumbering{Roman}
 \hypertarget{review-of-the-course-r-for-data-science-part-02talk-05-08}{%
 \section{Review of the course ``R for Data Science'' Part 02(Talk
 05\textasciitilde{}
@@ -136,6 +135,10 @@ This work is licensed under CC BY-NC-SA 4.0
 To reduce the size, all the codes listed will \emph{\textbf{NOT}}
 include the output as picture.
 
+\tableofcontents
+
+\newpage
+\pagenumbering{arabic}
 \hypertarget{r-for-bioinformatics-data-wrangler-part-1}{%
 \section{R for bioinformatics, data wrangler, part
 1}\label{r-for-bioinformatics-data-wrangler-part-1}}
