--- a/LaTeX/EN/REVIEW_03/REVIEW_03.tex
+++ b/LaTeX/EN/REVIEW_03/REVIEW_03.tex
@@ -4,7 +4,6 @@
 %
 \documentclass[
 ]{article}
-\usepackage{ctex}
 \usepackage{geometry}
 \geometry{a4paper,left=2.8cm,right=2.8cm,top=3cm,bottom=2.5cm}
 \usepackage{amsmath,amssymb}
@@ -111,7 +110,7 @@
 \date{}
 
 \begin{document}
-
+\pagenumbering{Roman}
 \hypertarget{review-of-the-course-r-for-data-science-part-03talk-09-12}{%
 \section{Review of the course ``R for Data Science'' Part 03(Talk
 09\textasciitilde{}
@@ -123,6 +122,10 @@ This work is licensed under CC BY-NC-SA 4.0
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
+\tableofcontents
+
+\newpage
+\pagenumbering{arabic}
 \hypertarget{r-for-bioinformatics-data-visualisation}{%
 \section{R for bioinformatics, data
 visualisation}\label{r-for-bioinformatics-data-visualisation}}
